# wol_server

./: .gitignore  Cargo.toml  README.md  bacon.toml  justfile
configuration/: base.toml  dev.toml
frontend/: .env.development  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/components/: auth.tsx  error.tsx  heading.tsx  signup-login.tsx  theme.tsx  user-navigation.tsx
frontend/src/context/: auth.tsx  theme.tsx
frontend/src/hooks/: theme.ts
frontend/src/lib/: auth.ts  axios.ts  cookie.ts  service.ts
frontend/src/pages/admin/: home.tsx
frontend/src/pages/auth/: login.tsx  signup.tsx  totp-login.tsx  totp-validate.tsx  totp.tsx
migrations/: 20250117232438_init.down.sql  20250117232438_init.up.sql
scripts/: setup_wol.sh
src/: app_state.rs  configuration.rs  lib.rs  main.rs  migration.rs  telemetry.rs
src/auth/: ctx.rs  error.rs  logout.rs  mod.rs  mw_auth.rs  password.rs
src/controller/: admin.rs  app.rs  error.rs  mod.rs
src/controller/admin/: user_requests.rs
src/controller/app/: auth.rs  login.rs  logout.rs
src/controller/app/auth/: login.rs  logout.rs  refresh.rs  signup.rs  totp.rs
src/ctx/: error.rs  mod.rs
src/middleware/: mw_auth.rs
src/model/: mod.rs  role.rs  user.rs  user_request.rs
