[package]
name = "wol_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8.1", features = ["http2", "macros"] }
chrono = { version = "0.4", features = ["serde"]}
config = { version = "0.15", default-features = false, features = ["toml"] }
jsonwebtoken = "9"
rand = "0.8"
serde = "1"
serde_json = "1"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
